--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,4 @@
-pydantic==2.3.0
+# This file is here because many Platforms as a Service look for
+#	requirements.txt in the root directory of a project.
+
+--requirement requirements/production.txt
